// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<bolt-action-blocks> Component Basic usage 1`] = `
<bolt-action-blocks>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M28.1 28.6H3.9c-.9 0-1.7.8-1.7 1.7S3 32 3.9 32h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7M15 25.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4V0h-9.1v12.7H6.9c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M26.2 27.6c0 .8-.7 1.5-1.5 1.5H7.3c-.8 0-1.5-.7-1.5-1.5V7.3c0-.8.7-1.5 1.5-1.5h1.5c0 1.6 1.3 2.9 2.9 2.9h8.7c1.6 0 2.9-1.3 2.9-2.9h1.5c.8 0 1.5.7 1.5 1.5v20.3zM11.6 2.9h8.7v2.9h-8.7V4.3zm13.1 0h-1.5C23.3 1.3 22 0 20.4 0h-8.7c-1.7 0-3 1.3-3 2.9H7.3c-2.4 0-4.4 2-4.4 4.4v20.4c0 2.4 2 4.4 4.4 4.4h17.5c2.4 0 4.4-2 4.4-4.4V7.3c-.1-2.4-2.1-4.4-4.5-4.4z">
                </path>
                <path d="M17.5 17.5v-2.9c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5v2.9h-2.9c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h2.9v2.9c0 .8.7 1.5 1.5 1.5s1.5-.7 1.5-1.5v-2.9h2.9c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M3.9 29h24.2V12.3H3.9zM28.1 2.5h-1.4V0h-3v2.5H8.3V0h-3v2.5H3.9c-1.7 0-3 1.4-3 3V29c0 1.7 1.4 3 3 3h24.2c1.7 0 3-1.4 3-3V5.5c0-1.7-1.3-3-3-3z">
                </path>
                <path d="M7.4 18.4h17.3v-3H7.4zM7.4 24.9H21v-3H7.4z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Border in between each block: false 1`] = `
<bolt-action-blocks>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M28.1 28.6H3.9c-.9 0-1.7.8-1.7 1.7S3 32 3.9 32h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7M15 25.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4V0h-9.1v12.7H6.9c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M26.2 27.6c0 .8-.7 1.5-1.5 1.5H7.3c-.8 0-1.5-.7-1.5-1.5V7.3c0-.8.7-1.5 1.5-1.5h1.5c0 1.6 1.3 2.9 2.9 2.9h8.7c1.6 0 2.9-1.3 2.9-2.9h1.5c.8 0 1.5.7 1.5 1.5v20.3zM11.6 2.9h8.7v2.9h-8.7V4.3zm13.1 0h-1.5C23.3 1.3 22 0 20.4 0h-8.7c-1.7 0-3 1.3-3 2.9H7.3c-2.4 0-4.4 2-4.4 4.4v20.4c0 2.4 2 4.4 4.4 4.4h17.5c2.4 0 4.4-2 4.4-4.4V7.3c-.1-2.4-2.1-4.4-4.5-4.4z">
                </path>
                <path d="M17.5 17.5v-2.9c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5v2.9h-2.9c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h2.9v2.9c0 .8.7 1.5 1.5 1.5s1.5-.7 1.5-1.5v-2.9h2.9c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M3.9 29h24.2V12.3H3.9zM28.1 2.5h-1.4V0h-3v2.5H8.3V0h-3v2.5H3.9c-1.7 0-3 1.4-3 3V29c0 1.7 1.4 3 3 3h24.2c1.7 0 3-1.4 3-3V5.5c0-1.7-1.3-3-3-3z">
                </path>
                <path d="M7.4 18.4h17.3v-3H7.4zM7.4 24.9H21v-3H7.4z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Border in between each block: true 1`] = `
<bolt-action-blocks borderless>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6 c-bolt-action-blocks--borderless">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M28.1 28.6H3.9c-.9 0-1.7.8-1.7 1.7S3 32 3.9 32h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7M15 25.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4V0h-9.1v12.7H6.9c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M26.2 27.6c0 .8-.7 1.5-1.5 1.5H7.3c-.8 0-1.5-.7-1.5-1.5V7.3c0-.8.7-1.5 1.5-1.5h1.5c0 1.6 1.3 2.9 2.9 2.9h8.7c1.6 0 2.9-1.3 2.9-2.9h1.5c.8 0 1.5.7 1.5 1.5v20.3zM11.6 2.9h8.7v2.9h-8.7V4.3zm13.1 0h-1.5C23.3 1.3 22 0 20.4 0h-8.7c-1.7 0-3 1.3-3 2.9H7.3c-2.4 0-4.4 2-4.4 4.4v20.4c0 2.4 2 4.4 4.4 4.4h17.5c2.4 0 4.4-2 4.4-4.4V7.3c-.1-2.4-2.1-4.4-4.5-4.4z">
                </path>
                <path d="M17.5 17.5v-2.9c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5v2.9h-2.9c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h2.9v2.9c0 .8.7 1.5 1.5 1.5s1.5-.7 1.5-1.5v-2.9h2.9c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M3.9 29h24.2V12.3H3.9zM28.1 2.5h-1.4V0h-3v2.5H8.3V0h-3v2.5H3.9c-1.7 0-3 1.4-3 3V29c0 1.7 1.4 3 3 3h24.2c1.7 0 3-1.4 3-3V5.5c0-1.7-1.3-3-3-3z">
                </path>
                <path d="M7.4 18.4h17.3v-3H7.4zM7.4 24.9H21v-3H7.4z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Deprecated props still render as expected 1`] = `
<bolt-action-blocks max-items-per-row="2"
                    valign="center"
                    borderless
>
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-center c-bolt-action-blocks--item-max-2 c-bolt-action-blocks--borderless">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M28.1 28.6H3.9c-.9 0-1.7.8-1.7 1.7S3 32 3.9 32h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7M15 25.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4V0h-9.1v12.7H6.9c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M26.2 27.6c0 .8-.7 1.5-1.5 1.5H7.3c-.8 0-1.5-.7-1.5-1.5V7.3c0-.8.7-1.5 1.5-1.5h1.5c0 1.6 1.3 2.9 2.9 2.9h8.7c1.6 0 2.9-1.3 2.9-2.9h1.5c.8 0 1.5.7 1.5 1.5v20.3zM11.6 2.9h8.7v2.9h-8.7V4.3zm13.1 0h-1.5C23.3 1.3 22 0 20.4 0h-8.7c-1.7 0-3 1.3-3 2.9H7.3c-2.4 0-4.4 2-4.4 4.4v20.4c0 2.4 2 4.4 4.4 4.4h17.5c2.4 0 4.4-2 4.4-4.4V7.3c-.1-2.4-2.1-4.4-4.5-4.4z">
                </path>
                <path d="M17.5 17.5v-2.9c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5v2.9h-2.9c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h2.9v2.9c0 .8.7 1.5 1.5 1.5s1.5-.7 1.5-1.5v-2.9h2.9c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M3.9 29h24.2V12.3H3.9zM28.1 2.5h-1.4V0h-3v2.5H8.3V0h-3v2.5H3.9c-1.7 0-3 1.4-3 3V29c0 1.7 1.4 3 3 3h24.2c1.7 0 3-1.4 3-3V5.5c0-1.7-1.3-3-3-3z">
                </path>
                <path d="M7.4 18.4h17.3v-3H7.4zM7.4 24.9H21v-3H7.4z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Subcomponent renders as expected 1`] = `
<bolt-action-block>
  <a class="c-bolt-action-block c-bolt-action-block--link"
     href="#!"
  >
    <div class="c-bolt-action-block__item">
      <svg class="e-bolt-icon e-bolt-icon--large"
           xmlns="http://www.w3.org/2000/svg"
           viewbox="0 0 32 32"
           aria-hidden="true"
      >
        <g fill="#151619"
           fill-rule="evenodd"
           clip-rule="evenodd"
        >
          <path d="M28.1 28.6H3.9c-.9 0-1.7.8-1.7 1.7S3 32 3.9 32h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7M15 25.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4V0h-9.1v12.7H6.9c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
          </path>
        </g>
      </svg>
    </div>
    <div class="c-bolt-action-block__item c-bolt-action-block__text">
      Item 1
    </div>
  </a>
</bolt-action-block>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: center 1`] = `
<bolt-action-blocks valign="center">
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-center c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M28.1 28.6H3.9c-.9 0-1.7.8-1.7 1.7S3 32 3.9 32h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7M15 25.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4V0h-9.1v12.7H6.9c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M26.2 27.6c0 .8-.7 1.5-1.5 1.5H7.3c-.8 0-1.5-.7-1.5-1.5V7.3c0-.8.7-1.5 1.5-1.5h1.5c0 1.6 1.3 2.9 2.9 2.9h8.7c1.6 0 2.9-1.3 2.9-2.9h1.5c.8 0 1.5.7 1.5 1.5v20.3zM11.6 2.9h8.7v2.9h-8.7V4.3zm13.1 0h-1.5C23.3 1.3 22 0 20.4 0h-8.7c-1.7 0-3 1.3-3 2.9H7.3c-2.4 0-4.4 2-4.4 4.4v20.4c0 2.4 2 4.4 4.4 4.4h17.5c2.4 0 4.4-2 4.4-4.4V7.3c-.1-2.4-2.1-4.4-4.5-4.4z">
                </path>
                <path d="M17.5 17.5v-2.9c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5v2.9h-2.9c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h2.9v2.9c0 .8.7 1.5 1.5 1.5s1.5-.7 1.5-1.5v-2.9h2.9c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M3.9 29h24.2V12.3H3.9zM28.1 2.5h-1.4V0h-3v2.5H8.3V0h-3v2.5H3.9c-1.7 0-3 1.4-3 3V29c0 1.7 1.4 3 3 3h24.2c1.7 0 3-1.4 3-3V5.5c0-1.7-1.3-3-3-3z">
                </path>
                <path d="M7.4 18.4h17.3v-3H7.4zM7.4 24.9H21v-3H7.4z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: end 1`] = `
<bolt-action-blocks valign="end">
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-end c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M28.1 28.6H3.9c-.9 0-1.7.8-1.7 1.7S3 32 3.9 32h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7M15 25.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4V0h-9.1v12.7H6.9c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M26.2 27.6c0 .8-.7 1.5-1.5 1.5H7.3c-.8 0-1.5-.7-1.5-1.5V7.3c0-.8.7-1.5 1.5-1.5h1.5c0 1.6 1.3 2.9 2.9 2.9h8.7c1.6 0 2.9-1.3 2.9-2.9h1.5c.8 0 1.5.7 1.5 1.5v20.3zM11.6 2.9h8.7v2.9h-8.7V4.3zm13.1 0h-1.5C23.3 1.3 22 0 20.4 0h-8.7c-1.7 0-3 1.3-3 2.9H7.3c-2.4 0-4.4 2-4.4 4.4v20.4c0 2.4 2 4.4 4.4 4.4h17.5c2.4 0 4.4-2 4.4-4.4V7.3c-.1-2.4-2.1-4.4-4.5-4.4z">
                </path>
                <path d="M17.5 17.5v-2.9c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5v2.9h-2.9c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h2.9v2.9c0 .8.7 1.5 1.5 1.5s1.5-.7 1.5-1.5v-2.9h2.9c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M3.9 29h24.2V12.3H3.9zM28.1 2.5h-1.4V0h-3v2.5H8.3V0h-3v2.5H3.9c-1.7 0-3 1.4-3 3V29c0 1.7 1.4 3 3 3h24.2c1.7 0 3-1.4 3-3V5.5c0-1.7-1.3-3-3-3z">
                </path>
                <path d="M7.4 18.4h17.3v-3H7.4zM7.4 24.9H21v-3H7.4z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: medium 1`] = `
<bolt-action-blocks spacing="medium">
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M28.1 28.6H3.9c-.9 0-1.7.8-1.7 1.7S3 32 3.9 32h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7M15 25.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4V0h-9.1v12.7H6.9c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M26.2 27.6c0 .8-.7 1.5-1.5 1.5H7.3c-.8 0-1.5-.7-1.5-1.5V7.3c0-.8.7-1.5 1.5-1.5h1.5c0 1.6 1.3 2.9 2.9 2.9h8.7c1.6 0 2.9-1.3 2.9-2.9h1.5c.8 0 1.5.7 1.5 1.5v20.3zM11.6 2.9h8.7v2.9h-8.7V4.3zm13.1 0h-1.5C23.3 1.3 22 0 20.4 0h-8.7c-1.7 0-3 1.3-3 2.9H7.3c-2.4 0-4.4 2-4.4 4.4v20.4c0 2.4 2 4.4 4.4 4.4h17.5c2.4 0 4.4-2 4.4-4.4V7.3c-.1-2.4-2.1-4.4-4.5-4.4z">
                </path>
                <path d="M17.5 17.5v-2.9c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5v2.9h-2.9c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h2.9v2.9c0 .8.7 1.5 1.5 1.5s1.5-.7 1.5-1.5v-2.9h2.9c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2: this item has more text, so it can demonstrate the vertical alignment
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M3.9 29h24.2V12.3H3.9zM28.1 2.5h-1.4V0h-3v2.5H8.3V0h-3v2.5H3.9c-1.7 0-3 1.4-3 3V29c0 1.7 1.4 3 3 3h24.2c1.7 0 3-1.4 3-3V5.5c0-1.7-1.3-3-3-3z">
                </path>
                <path d="M7.4 18.4h17.3v-3H7.4zM7.4 24.9H21v-3H7.4z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: small 1`] = `
<bolt-action-blocks spacing="small">
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-small c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M28.1 28.6H3.9c-.9 0-1.7.8-1.7 1.7S3 32 3.9 32h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7M15 25.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4V0h-9.1v12.7H6.9c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M26.2 27.6c0 .8-.7 1.5-1.5 1.5H7.3c-.8 0-1.5-.7-1.5-1.5V7.3c0-.8.7-1.5 1.5-1.5h1.5c0 1.6 1.3 2.9 2.9 2.9h8.7c1.6 0 2.9-1.3 2.9-2.9h1.5c.8 0 1.5.7 1.5 1.5v20.3zM11.6 2.9h8.7v2.9h-8.7V4.3zm13.1 0h-1.5C23.3 1.3 22 0 20.4 0h-8.7c-1.7 0-3 1.3-3 2.9H7.3c-2.4 0-4.4 2-4.4 4.4v20.4c0 2.4 2 4.4 4.4 4.4h17.5c2.4 0 4.4-2 4.4-4.4V7.3c-.1-2.4-2.1-4.4-4.5-4.4z">
                </path>
                <path d="M17.5 17.5v-2.9c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5v2.9h-2.9c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h2.9v2.9c0 .8.7 1.5 1.5 1.5s1.5-.7 1.5-1.5v-2.9h2.9c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2: this item has more text, so it can demonstrate the vertical alignment
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M3.9 29h24.2V12.3H3.9zM28.1 2.5h-1.4V0h-3v2.5H8.3V0h-3v2.5H3.9c-1.7 0-3 1.4-3 3V29c0 1.7 1.4 3 3 3h24.2c1.7 0 3-1.4 3-3V5.5c0-1.7-1.3-3-3-3z">
                </path>
                <path d="M7.4 18.4h17.3v-3H7.4zM7.4 24.9H21v-3H7.4z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: start 1`] = `
<bolt-action-blocks valign="start">
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-medium c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M28.1 28.6H3.9c-.9 0-1.7.8-1.7 1.7S3 32 3.9 32h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7M15 25.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4V0h-9.1v12.7H6.9c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M26.2 27.6c0 .8-.7 1.5-1.5 1.5H7.3c-.8 0-1.5-.7-1.5-1.5V7.3c0-.8.7-1.5 1.5-1.5h1.5c0 1.6 1.3 2.9 2.9 2.9h8.7c1.6 0 2.9-1.3 2.9-2.9h1.5c.8 0 1.5.7 1.5 1.5v20.3zM11.6 2.9h8.7v2.9h-8.7V4.3zm13.1 0h-1.5C23.3 1.3 22 0 20.4 0h-8.7c-1.7 0-3 1.3-3 2.9H7.3c-2.4 0-4.4 2-4.4 4.4v20.4c0 2.4 2 4.4 4.4 4.4h17.5c2.4 0 4.4-2 4.4-4.4V7.3c-.1-2.4-2.1-4.4-4.5-4.4z">
                </path>
                <path d="M17.5 17.5v-2.9c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5v2.9h-2.9c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h2.9v2.9c0 .8.7 1.5 1.5 1.5s1.5-.7 1.5-1.5v-2.9h2.9c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M3.9 29h24.2V12.3H3.9zM28.1 2.5h-1.4V0h-3v2.5H8.3V0h-3v2.5H3.9c-1.7 0-3 1.4-3 3V29c0 1.7 1.4 3 3 3h24.2c1.7 0 3-1.4 3-3V5.5c0-1.7-1.3-3-3-3z">
                </path>
                <path d="M7.4 18.4h17.3v-3H7.4zM7.4 24.9H21v-3H7.4z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;

exports[`<bolt-action-blocks> Component Vertical alignment of each block's content: xsmall 1`] = `
<bolt-action-blocks spacing="xsmall">
  <ul class="c-bolt-action-blocks c-bolt-action-blocks--spacing-xsmall c-bolt-action-blocks--valign-start c-bolt-action-blocks--item-max-6">
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M28.1 28.6H3.9c-.9 0-1.7.8-1.7 1.7S3 32 3.9 32h24.3c.9 0 1.7-.8 1.7-1.7-.1-.9-.8-1.7-1.8-1.7M15 25.5c.2.3.6.5 1 .5s.8-.2 1-.5l9.1-10.9c.3-.4.4-.9.1-1.3-.2-.4-.7-.7-1.2-.7h-4.4V0h-9.1v12.7H6.9c-.5 0-.9.3-1.2.7-.1.2-.1.3-.1.5 0 .3.1.5.3.7z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 1
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M26.2 27.6c0 .8-.7 1.5-1.5 1.5H7.3c-.8 0-1.5-.7-1.5-1.5V7.3c0-.8.7-1.5 1.5-1.5h1.5c0 1.6 1.3 2.9 2.9 2.9h8.7c1.6 0 2.9-1.3 2.9-2.9h1.5c.8 0 1.5.7 1.5 1.5v20.3zM11.6 2.9h8.7v2.9h-8.7V4.3zm13.1 0h-1.5C23.3 1.3 22 0 20.4 0h-8.7c-1.7 0-3 1.3-3 2.9H7.3c-2.4 0-4.4 2-4.4 4.4v20.4c0 2.4 2 4.4 4.4 4.4h17.5c2.4 0 4.4-2 4.4-4.4V7.3c-.1-2.4-2.1-4.4-4.5-4.4z">
                </path>
                <path d="M17.5 17.5v-2.9c0-.8-.7-1.5-1.5-1.5s-1.5.7-1.5 1.5v2.9h-2.9c-.8 0-1.5.7-1.5 1.5s.7 1.5 1.5 1.5h2.9v2.9c0 .8.7 1.5 1.5 1.5s1.5-.7 1.5-1.5v-2.9h2.9c.8 0 1.5-.7 1.5-1.5s-.7-1.5-1.5-1.5z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 2: this item has more text, so it can demonstrate the vertical alignment
          </div>
        </a>
      </bolt-action-block>
    </li>
    <li class="c-bolt-action-blocks__item">
      <bolt-action-block>
        <a class="c-bolt-action-block c-bolt-action-block--link"
           href="#!"
        >
          <div class="c-bolt-action-block__item">
            <svg class="e-bolt-icon e-bolt-icon--large"
                 xmlns="http://www.w3.org/2000/svg"
                 viewbox="0 0 32 32"
                 aria-hidden="true"
            >
              <g fill="#151619"
                 fill-rule="evenodd"
                 clip-rule="evenodd"
              >
                <path d="M3.9 29h24.2V12.3H3.9zM28.1 2.5h-1.4V0h-3v2.5H8.3V0h-3v2.5H3.9c-1.7 0-3 1.4-3 3V29c0 1.7 1.4 3 3 3h24.2c1.7 0 3-1.4 3-3V5.5c0-1.7-1.3-3-3-3z">
                </path>
                <path d="M7.4 18.4h17.3v-3H7.4zM7.4 24.9H21v-3H7.4z">
                </path>
              </g>
            </svg>
          </div>
          <div class="c-bolt-action-block__item c-bolt-action-block__text">
            Item 3
          </div>
        </a>
      </bolt-action-block>
    </li>
  </ul>
</bolt-action-blocks>
`;
